Fixes for path issues locally

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,7 +9,7 @@
   <title>Your awesome title</title>
   <meta name="description" content="Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search resu...">
 
-  <link rel="stylesheet" href="/assets/css/styles.css">
+  <link rel="stylesheet" href="{{base}}/assets/css/styles.css">
   <link rel="canonical" href="http://localhost:4000/">
   <link rel="alternate" type="application/rss+xml" title="Your awesome title" href="/feed.xml">
   
@@ -24,9 +24,7 @@
 
       <!-- Main component for a primary marketing message or call to action -->
       <div class="jumbotron">
-        
     
-
         <h1>Component Library</h1>
         <p>This example is a quick exercise to illustrate how the default, static and fixed to top navbar work. It includes the responsive CSS and HTML, so it also adapts to your viewport and device.</p>
         <p>To see the difference between static and fixed top navbars, just scroll.</p>
@@ -41,6 +39,8 @@
     {{content}}
 
     {% include footer.html %}
+    
+    
  
   </body>
 
