--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="navbar-header">
       <button type="button" data-toggle="collapse" data-target="#navbar-collapse-1" class="navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-      <a class="navbar-brand" href="#"><img src="/assets/img/scottish-enterprise.svg" alt="Scottish Enterprise"></a> </div>
+      <a class="navbar-brand" href="/"><img src="/assets/img/scottish-enterprise.svg" alt="Scottish Enterprise"></a> </div>
     <div id="navbar-collapse-1" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <!-- Classic list -->
