--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,5 +10,5 @@
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script>
 
-  <script src="/assets/javascripts/bootstrap.min.js"></script>
+  <script src="{{ site.baseurl}}/assets/javascripts/bootstrap.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.11.0/highlight.min.js"></script>
