--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,14 +2,14 @@
   <div class="container">
     <div class="navbar-header">
       <button type="button" data-toggle="collapse" data-target="#navbar-collapse-1" class="navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-      <a class="navbar-brand" href="/"><img src="/assets/img/scottish-enterprise.svg" alt="Scottish Enterprise"></a> </div>
+      <a class="navbar-brand" href="{{ site.baseurl}}/"><img src="{{site.baseurl}}/assets/img/scottish-enterprise.svg" alt="Scottish Enterprise"></a> </div>
     <div id="navbar-collapse-1" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <!-- Classic list -->
         <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Components <b class="caret"></b></a>
           <ul role="menu" class="dropdown-menu">
             {% for cookie in site.se-elements %}
-            <li><a href="{{ cookie.url }}">{{ cookie.title }}</a></li>
+            <li><a href="{{ site.baseurl}}{{ cookie.url }}">{{ cookie.title }}</a></li>
             {% endfor %}
           </ul>
         </li>
@@ -17,7 +17,7 @@
         <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Patterns <b class="caret"></b></a>
           <ul role="menu" class="dropdown-menu">
             {% for cookie in site.se-patterns %}
-            <li><a href="{{ cookie.url }}">{{ cookie.title }}</a></li>
+            <li><a href="{{ site.baseurl}}{{ cookie.url }}">{{ cookie.title }}</a></li>
             {% endfor %}
           </ul>
         </li>
@@ -25,7 +25,7 @@
         <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Visual Language<b class="caret"></b></a>
           <ul role="menu" class="dropdown-menu">
             {% for cookie in site.se-visual-language %}
-            <li><a href="{{ cookie.url }}">{{ cookie.title }}</a></li>
+            <li><a href="{{ site.baseurl}}{{ cookie.url }}">{{ cookie.title }}</a></li>
             {% endfor %}
           </ul>
         </li>
@@ -33,7 +33,7 @@
         <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Page Templates<b class="caret"></b></a>
           <ul role="menu" class="dropdown-menu">
             {% for cookie in site.se-templates %}
-            <li><a href="{{ cookie.url }}">{{ cookie.title }}</a></li>
+            <li><a href="{{ site.baseurl}}{{ cookie.url }}">{{ cookie.title }}</a></li>
             {% endfor %}
           </ul>
         </li>
