--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,7 +6,7 @@
     <div id="navbar-collapse-1" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <!-- Classic list -->
-        <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Components <b class="caret"></b></a>
+        <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Elements <b class="caret"></b></a>
           <ul role="menu" class="dropdown-menu">
             {% for cookie in site.se-elements %}
             <li><a href="{{ site.baseurl}}{{ cookie.url }}">{{ cookie.title }}</a></li>
