--- a/_sass/_component-library.scss
+++ b/_sass/_component-library.scss
@@ -11,14 +11,40 @@ body.component-library {
     background: #2F3E44;
     color: white;
     padding: 2em 0;
+    margin-top: 1em;
   }
   pre{
     font-family: Consolas, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
     margin-bottom: 10px;
-    overflow: auto;
-    width: auto;
-    padding: 5px;
+    width: 100%;
     background-color: #eee;
-    max-height: 600px;
+    max-height: 200px;
+    
+    textarea {
+      width: 100%;
+      height: 200px;
+      border: none;
+      background: transparent;
+      float: left;
+      &:focus {outline: 0;}
+    }
 	}
+	
+	.demo-box {
+    padding: 2em;
+  	background: white;
+  	margin-bottom: 1em;
+	}
+	
+	.usage-notes {
+    padding: 2em;
+  	background: white;
+  	margin-bottom: 1em;
+  	p {max-width: 700px;}
+  	h2 {
+    	margin-top: 0;
+    	font-size: 1.5em;
+  	}
+	}
+	
 }
