--- a/_sass/_component-library.scss
+++ b/_sass/_component-library.scss
@@ -19,13 +19,16 @@ body.component-library {
     width: 100%;
     background-color: #eee;
     max-height: 200px;
+	overflow-y: hidden;
     
     textarea {
       width: 100%;
-      height: 200px;
+      height: 150px;
       border: none;
-      background: transparent;
+      background-color: transparent;
       float: left;
+	  padding-left:50px;
+	  resize: none;
       &:focus {outline: 0;}
     }
 	}
