--- a/_sass/se-bootstrap/se-variables.scss
+++ b/_sass/se-bootstrap/se-variables.scss
@@ -7,6 +7,7 @@ $se-light-grey: #ecf0f1;
 $se-black: #2F3E44;
 $se-orange: #D65811;
 $se-red: #d60000;
-
 $accessible-green: #128512;
 $highlight-blue: #00B4FF;
+$alert-padding: 0 0 0 7px;
+$line-height-computed: 10px 0 0 0;
