--- a/_sass/bootstrap/_alerts.scss
+++ b/_sass/bootstrap/_alerts.scss
@@ -6,11 +6,19 @@
 // Base styles
 // -------------------------
 
+
+
+//.alert {
+//    padding: 0 0 0 7px;
+//    margin: 10px 0 0 0;
+//    border-left: 5px solid #a94442;
+//}
+
 .alert {
   padding: $alert-padding;
-  margin-bottom: $line-height-computed;
-  border: 1px solid transparent;
-  border-radius: $alert-border-radius;
+  margin: 10px 0 0 0;
+  border-left: 5px solid #a94442;
+  /*border-radius: $alert-border-radius;*/
 
   // Headings for larger alerts
   h4 {
@@ -34,6 +42,9 @@
     margin-top: 5px;
   }
 }
+
+
+
 
 // Dismissible alerts
 //
@@ -67,7 +78,13 @@
 .alert-warning {
   @include alert-variant($alert-warning-bg, $alert-warning-border, $alert-warning-text);
 }
+//
+//.alert-danger {
+//  @include alert-variant($alert-danger-bg, $alert-danger-border, $alert-danger-text);
+//}
 
 .alert-danger {
-  @include alert-variant($alert-danger-bg, $alert-danger-border, $alert-danger-text);
+    /* background-color: #f2dede; */
+    border-color: #a94442;
+    color: #a94442;
 }
