colour palette page built

--- a/_sass/_component-library.scss
+++ b/_sass/_component-library.scss
@@ -1,3 +1,5 @@
+@import 'se-bootstrap/se-variables.scss';
+
 body.component-library {
     padding-top: 70px;
   .navbar-brand {
@@ -211,7 +213,68 @@ textarea {
   margin: 0;
   border: 0;
 }
-	
-	
+		
 	
 }
+
+/* Colour patches */
+
+.color-block {
+   text-align: center;
+	padding: 1em;
+}
+
+.color-block__color {
+   display: block;
+   float:left;
+   width: 150px;
+   height: 150px;
+   padding-top: 12.5px;
+   margin: 0 10px;
+   border-radius: 100%;
+   line-height: 37.5px;
+   color: #fff;
+   content: "";
+}
+
+
+.color-block__color.se-blue{
+	background-color: $se-blue;
+	margin:1em;
+}
+
+.color-block__color.se-bright-green{
+	background-color: $se-bright-green;
+	margin:1em;
+}
+
+.color-block__color.se-light-blue{
+	background-color: $se-light-blue;
+	margin:1em;
+}
+
+.color-block__color.se-dark-green{
+	background-color: $se-dark-green;
+	margin:1em;
+}
+
+.color-block__color.se-orange{
+	background-color: $se-orange;
+	margin:1em;
+}
+
+.color-block__color.se-black{
+	background-color: $se-black;
+	margin:1em;
+}
+
+.color-block__color.se-mid-grey{
+	background-color: $se-mid-grey;
+	margin:1em;
+}
+
+.color-block__color.se-light-grey{
+	background-color: $se-light-grey;
+	margin:1em;
+}
+
