update to colors files

--- a/_sass/se-bootstrap/se-variables.scss
+++ b/_sass/se-bootstrap/se-variables.scss
@@ -7,6 +7,9 @@ $se-light-grey: #ecf0f1;
 $se-black: #2F3E44;
 $se-orange: #D65811;
 $se-red: #d60000;
+$se-body-grey:#666666;
+$se-dark-grey: #333333;
+$se-white: #ffffff;
 $accessible-green: #128512;
 $highlight-blue: #00B4FF;
 $alert-padding: 0 0 0 7px;
