--- a/_sass/_component-library.scss
+++ b/_sass/_component-library.scss
@@ -227,13 +227,27 @@ textarea {
 .color-block__color {
    display: block;
    float:left;
-   width: 150px;
-   height: 150px;
+   width: 180px;
+   height: 180px;
    padding-top: 12.5px;
    margin: 0 10px;
    border-radius: 100%;
    line-height: 37.5px;
    color: #fff;
+   content: "";
+}
+
+.color-block__color__border {
+   display: block;
+   float:left;
+   width: 180px;
+   height: 180px;
+   padding-top: 12.5px;
+   margin: 16px 10px;
+   border-radius: 100%;
+   border:1px solid black;
+   line-height: 37.5px;
+   color: #000;
    content: "";
 }
 
@@ -277,4 +291,22 @@ textarea {
 	background-color: $se-light-grey;
 	margin:1em;
 }
+
+/* Typography colours */
+
+.color-block__color.se-dark-grey{
+	background-color: $se-dark-grey;
+	margin:1em;
+}
+
+.color-block__color.se-body-grey{
+	background-color: $se-body-grey;
+	margin:1em;
+}
+
+.color-block__color.se-white{
+	background-color: $se-white;
+}
+
+
 
