--- a/_sass/_mygov-assets.scss
+++ b/_sass/_mygov-assets.scss
@@ -3143,7 +3143,7 @@ label {
 }
 
 select {
-  background: #ffffff;
+  background: white;
   border: 1px solid #b3b3b3;
   border-radius: 0;
   font-family: Helvetica, Arial, sans-serif;
