form elements added - placeholders

--- a/_sass/_mygov-assets.scss
+++ b/_sass/_mygov-assets.scss
@@ -3260,7 +3260,7 @@ fieldset {
 
 /* end from Bootstrap */
 .input-wrapper {
-  position: relative;
+  //position: relative;
 }
 
 ::-webkit-input-placeholder {
