grouped inputs types together

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -11,7 +11,7 @@
        
         <!-- Elements Drop Down Menu -->
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Elements <b class="caret"></b> </a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Elements <b class="caret"></b> </a>
           <ul class="dropdown-menu">
             <li>
               <div class="yamm-content row">               
@@ -57,7 +57,7 @@
                 <div class="col-md-12 unstyled">
                   <h4>Components</h4>
                   <ul role="menu">
-                    {% for cookie in site.se-patterns %}
+                    {% for cookie in site.se-components %}
                     <li><a href="{{ site.baseurl}}{{ cookie.url }}">{{ cookie.title }}</a></li>
                     {% endfor %}
                   </ul>
