implementing ‘copy code snippet’ feature

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,6 +41,8 @@
           <div class="example-code">
                           
             <pre><code><textarea readonly>{{ content }}</textarea></code></pre>
+                                       
+            <button class="btn btn-primary">Copy code snippet</button>
                     
           </div>
           
