Adding styles for Progress Indicator

--- a/_includes/breadcrumbs.html
+++ b/_includes/breadcrumbs.html
@@ -1,6 +1,6 @@
 <ol id="breadcrumbs" role="navigation" class="breadcrumbs">
     <li class="breadcrumbs__item" itemprop="url">
-        <a class="breadcrumbs__link" href="{{ site.baseurl}}" data-gtm="bread-0">
+        <a class="breadcrumbs__link" href="{{ site.baseurl}}/" data-gtm="bread-0">
             <span class="breadcrumbs__title" itemprop="title">Home</span><!--
         --></a>
     </li>
