--- a/_sass/_component-library.scss
+++ b/_sass/_component-library.scss
@@ -24,7 +24,7 @@ body.component-library {
   
   .demo-box {
     position: relative;
-    padding: 1em;
+    padding: 3em 1em 1em;
     border: 1px solid #e8e8e8;
     margin-bottom: 2em;
 
