--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -11,4 +11,5 @@
 @import "layout.scss";
 @import "misc.scss";
 @import "navbar.scss";
+@import "progress-indicator.scss";
 @import "se-styles.scss";
