Sorting out pages and typography

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -3,6 +3,7 @@
 ---
 
 @import "variables.scss";
+@import "typography.scss";
 @import "buttons.scss";
 @import "cards.scss";
 @import "component-library.scss";
