--- a/_sass/_forms.scss
+++ b/_sass/_forms.scss
@@ -63,3 +63,36 @@ label.inline {
     }
   
 }
+
+
+	.fileUpload {
+		position: relative;
+		overflow: hidden;
+/*		margin:10px;*/		
+	}
+	
+	.fileUpload input.upload {
+		position:absolute;
+		top:0;
+		right:0;
+		margin:0;
+		padding:0;
+		font-size:20px;
+		cursor: pointer;
+		opacity:0;
+		filter:alpha(opacity=0);		
+	}
+	
+	
+	.upload-file-text {
+		position: relative;
+		margin: 0 0 5px 0px;
+		font-weight:300;
+	}
+	
+	.upload-file-caption {
+		position: relative;
+		margin: 0 0 5px 15px;
+	}
+
+
