--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -3,6 +3,7 @@
 ---
 
 @import "variables.scss";
+@import "mixins.scss";
 @import "typography.scss";
 @import "buttons.scss";
 @import "cards.scss";
