--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -8,6 +8,8 @@
     padding-top: 1em;
     padding-bottom: 1em;
     width: auto!important;
+    text-transform: none;
+    font-weight: 400;
     @include transition(background-color 0.5s, color 0.5s);
     &.button--primary {
         background-color: $se-blue;
