--- a/_sass/_se-styles.scss
+++ b/_sass/_se-styles.scss
@@ -3,54 +3,65 @@
 /* ==========================================================================
    SE dot com Custom styles 
    ========================================================================== */
-   
+
 body {
-  margin-bottom: 0;
+    margin-bottom: 0;
 }
 
 #main {
-  padding-bottom: 50px;
+    padding-bottom: 50px;
 }
 
 footer {
-  padding-top: 3em;
-  border-top: $grey-borders 1px solid;
-  .navbar {
-    margin: 2em 0;
-    border-bottom: none;
-    ul {
-      margin: 0px;
-      padding: 0;
-    li {display: inline-block; margin-right: 1em;}
+    padding-top: 3em;
+    border-top: $grey-borders 1px solid;
+    .navbar {
+        margin: 2em 0;
+        border-bottom: none;
+        ul {
+            margin: 0;
+            padding: 0;
+            li {
+                display: inline-block;
+                margin-right: 1em;
+            }
+        }
     }
-  }  
 }
 
-
+a {
+    color: $se-blue;
+    @include transition(color 0.5s);
+    &:hover {
+        color: $se-light-blue;
+        @include transition(color 0.5s);
+    }
+}
 
 #logo-block {
-  margin-left: -1em;
+    margin-left: -1em;
 }
 
 @media (max-width: 992px) {
-  footer {
-    text-align: center;
-    #logo-block {
-      text-align: center;
-      margin-left: 0;
-      img {max-width: 25%;
-        
-      }
+    footer {
+        text-align: center;
+        #logo-block {
+            text-align: center;
+            margin-left: 0;
+            img {
+                max-width: 25%;
+
+            }
+        }
     }
-  }
 }
 
 @media (max-width: 786px) {
-  footer {
-    #logo-block {
-      img {
-        max-width: 45%;
-      }
-    }
+    footer {
+        #logo-block {
+            img {
+                max-width: 45%;
+            }
+        }
     }
 }
