--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -24,3 +24,37 @@
     background-size: 36px 36px !important;
   }
 }
+
+h1 {
+  font-size: 48px;
+  line-height: 54px;
+}
+
+h2 {
+  font-size: 36px;
+  line-height: 42px;
+}
+
+h3 {
+  font-size: 24px;
+  line-height: 30px;
+}
+
+h4 {
+  font-size: 20px;
+  line-height: 26px;
+}
+
+h5 {
+  font-size: 18px;
+  line-height: 26px;
+}
+
+h6 {
+  font-size: 16px;
+  line-height: 22px;
+}
+
+h1,h2,h3,h4,h5,h6 {
+  font-weight: 700;
+}
