--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -4,6 +4,7 @@
 
 @import "variables.scss";
 @import "mixins.scss";
+@import "fonts.scss";
 @import "typography.scss";
 @import "buttons.scss";
 @import "cards.scss";
