Updated Links page

--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -51,3 +51,20 @@
         }
     }
 }
+
+
+// Override Scot Gov styling //
+article a[href^="//"]:not(.button),
+article a[href^="http://"]:not(.button),
+article a[href^="https://"]:not(.button) {
+    background-image: none;
+}
+
+article a[href^="//"]:hover:not(.button),
+article a[href^="//"]:active:not(.button),
+article a[href^="http://"]:hover:not(.button),
+article a[href^="http://"]:active:not(.button),
+article a[href^="https://"]:hover:not(.button),
+article a[href^="https://"]:active:not(.button) {
+    background-image: none;
+}
