Update SASS files

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -9,6 +9,7 @@
 @import "buttons.scss";
 @import "cards.scss";
 @import "component-library.scss";
+@import "components.scss";
 @import "forms.scss";
 @import "images.scss";
 @import "layout.scss";
