--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -58,3 +58,43 @@ h6 {
 h1,h2,h3,h4,h5,h6 {
   font-weight: 700;
 }
+
+// Override Scot Gov color //
+.emphasis {
+  &:before {
+    background-color: $se-blue;
+  }
+}
+
+// -- Breadcrumbs -- //
+.breadcrumbs {
+  font-size: 14px;
+  margin: 14px 0 13px;
+  color: $se-grey;
+  padding-left: 0;
+  .breadcrumbs__item {
+    display: inline-block;
+    margin-bottom: 0;
+    margin-left: 0;
+    padding: 0;
+    &:after {
+      font-family: FontAwesome;
+      content: "\f105";
+      font-size: 16px;
+      color: $se-grey;
+      font-weight: 300;
+      padding: 0 3px 0 8px;
+      line-height: 14px;
+    }
+    &:last-of-type:after {
+      content: none;
+    }
+  }
+}
+
+
+
+
+
+
+
