--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -30,6 +30,7 @@ $se-white:          #ffffff;
 $se-light-grey:     #ecf0f1;
 $se-light-mid-grey: #dddddd;
 $se-mid-grey:       #999999;
+$se-grey:           #727272;
 $se-body-grey:      #666666;
 $se-dark-grey:      #333333;
 $se-black:          #2F3E44;
