--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -77,6 +77,7 @@ h1,h2,h3,h4,h5,h6 {
     margin-bottom: 0;
     margin-left: 0;
     padding: 0;
+    position: relative;
     &:after {
       font-family: FontAwesome;
       content: "\f105";
@@ -85,6 +86,9 @@ h1,h2,h3,h4,h5,h6 {
       font-weight: 300;
       padding: 0 3px 0 8px;
       line-height: 14px;
+      box-sizing: inherit;
+      position: relative;
+      top: 1px;
     }
     &:last-of-type:after {
       content: none;
