Accordion page updated + styling + general tidy up

--- a/_sass/_se-styles.scss
+++ b/_sass/_se-styles.scss
@@ -66,3 +66,21 @@ a {
         }
     }
 }
+
+*,
+*:active {
+    outline: none;
+    focus {outline:none;} ::-moz-focus-inner {border:0;}
+}
+
+a:active {
+    outline: none;
+    focus {outline:none;} ::-moz-focus-inner {border:0;}
+}
+
+button::-moz-focus-inner {
+    border: 0;
+    focus {outline:none;} ::-moz-focus-inner {border:0;}
+}
+
+
