--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>SE Pattern Library</title>
-<meta name="description" content="Scottish Enterprise - Visual Style Guide">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="https://resources.mygov.scot/assets/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://scottishgovernment.github.io/assets/css/main_forms.css">
-<link rel="stylesheet" href="https://scottishgovernment.github.io/assets/css/form.css">
-<link rel="stylesheet" href="{{site.baseurl}}/assets/css/styles.css">
-<link rel="canonical" href="http://localhost:4000/">
-<link rel="alternate" type="application/rss+xml" title="SE Pattern Library" href="/feed.xml">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>SE Pattern Library</title>
+    <meta name="description" content="Scottish Enterprise - Visual Style Guide">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://resources.mygov.scot/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://scottishgovernment.github.io/assets/css/main_forms.css">
+    <link rel="stylesheet" href="https://scottishgovernment.github.io/assets/css/form.css">
+    <link rel="stylesheet" href="{{site.baseurl}}/assets/css/styles.css">
+    <link rel="canonical" href="http://localhost:4000/">
+    <link rel="alternate" type="application/rss+xml" title="SE Pattern Library" href="/feed.xml">
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
 </head>
