--- a/_includes/code-page-breadcrumbs.html
+++ b/_includes/code-page-breadcrumbs.html
@@ -3,15 +3,15 @@
 {% assign previous="" %}
 <ol id="breadcrumbs" role="navigation" class="breadcrumbs">
     {% if num_parts == "0" or num_parts == "-1" %}
-    <li class="breadcrumb-item"><a href="/">Home</a></li>
+    <li class="breadcrumb-item"><a href="/se-style-guide">Home</a></li>
     {% else %}
-    <li class="breadcrumb-item"><a href="/">Home</a></li>
+    <li class="breadcrumb-item"><a href="/se-style-guide">Home</a></li>
 
     {% for unused in page.content limit:num_parts %}
     {% capture first_word %}{{ url_parts | truncatewords:1 | remove:"..."}}{% endcapture %}
     {% capture previous %}{{ previous }}/{{ first_word }}{% endcapture %}
 
-    <li class="breadcrumb-item"><a href="{{previous}}">{{ first_word }}</a></li>
+    <li class="breadcrumb-item"><a href="/se-style-guide{{previous}}">{{ first_word }}</a></li>
 
     {% capture url_parts %}{{ url_parts | remove_first:first_word }}{% endcapture %}
     {% endfor %}
