--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -10,5 +10,6 @@
 body {
     font-family: Roboto,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 16px;
+    line-height: 23px;
     font-weight: normal;
 }
