--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -59,6 +59,13 @@ h1,h2,h3,h4,h5,h6 {
   font-weight: 700;
 }
 
+.leader {
+  font-size: 25px;
+  line-height: 34px;
+  font-weight: 300;
+  margin: 0 0 35px 0;
+}
+
 // Override Scot Gov color //
 .emphasis {
   &:before {
