--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -13,3 +13,60 @@ body {
     line-height: 23px;
     font-weight: normal;
 }
+
+// Reference Din fonts for headings //
+
+@font-face {
+    font-family: 'din-blackregular';
+    src: url('/sept-mvs/assets/fonts/Din/din-blac-webfont.eot');
+    src: url('/sept-mvs/assets/fonts/Din/din-blac-webfont.eot?#iefix') format('embedded-opentype'),
+    url('/sept-mvs/assets/fonts/Din/din-blac-webfont.woff') format('woff'),
+    url('/sept-mvs/assets/fonts/Din/din-blac-webfont.ttf') format('truetype'),
+    url('/sept-mvs/assets/fonts/Din/din-blac-webfont.svg#din-blackregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'din-boldregular';
+    src: url('/sept-mvs/assets/fonts/Din/din-bold-webfont.eot');
+    src: url('/sept-mvs/assets/fonts/Din/din-bold-webfont.eot?#iefix') format('embedded-opentype'),
+    url('/sept-mvs/assets/fonts/Din/din-bold-webfont.woff') format('woff'),
+    url('/sept-mvs/assets/fonts/Din/din-bold-webfont.ttf') format('truetype'),
+    url('/sept-mvs/assets/fonts/Din/din-bold-webfont.svg#din-boldregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'din-lightregular';
+    src: url('/sept-mvs/assets/fonts/Din/din-ligh-webfont.eot');
+    src: url('/sept-mvs/assets/fonts/Din/din-ligh-webfont.eot?#iefix') format('embedded-opentype'),
+    url('/sept-mvs/assets/fonts/Din/din-ligh-webfont.woff') format('woff'),
+    url('/sept-mvs/assets/fonts/Din/din-ligh-webfont.ttf') format('truetype'),
+    url('/sept-mvs/assets/fonts/Din/din-ligh-webfont.svg#din-lightregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'din-mediumregular';
+    src: url('/sept-mvs/assets/fonts/Din/din-medi-webfont.eot');
+    src: url('/sept-mvs/assets/fonts/Din/din-medi-webfont.eot?#iefix') format('embedded-opentype'),
+    url('/sept-mvs/assets/fonts/Din/din-medi-webfont.woff') format('woff'),
+    url('/sept-mvs/assets/fonts/Din/din-medi-webfont.ttf') format('truetype'),
+    url('/sept-mvs/assets/fonts/Din/din-medi-webfont.svg#din-mediumregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'din-regularregular';
+    src: url('/sept-mvs/assets/fonts/Din/din-regu-webfont.eot');
+    src: url('/sept-mvs/assets/fonts/Din/din-regu-webfont.eot?#iefix') format('embedded-opentype'),
+    url('/sept-mvs/assets/fonts/Din/din-regu-webfont.woff') format('woff'),
+    url('/sept-mvs/assets/fonts/Din/din-regu-webfont.ttf') format('truetype'),
+    url('/sept-mvs/assets/fonts/Din/din-regu-webfont.svg#din-regularregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: din-mediumregular;
+}
