--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -28,6 +28,7 @@ $se-blue:           #00427F;
 // SE Greyscale
 $se-white:          #ffffff;
 $se-light-grey:     #ecf0f1;
+$se-lighter-grey:   #bbbbbb;
 $se-light-mid-grey: #dddddd;
 $se-mid-grey:       #999999;
 $se-grey:           #727272;
