--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -72,6 +72,9 @@
                         }
                     }
                 }
+                &:last-of-type a {
+                    padding-right: 0;
+                }
             }
         }
 
@@ -162,7 +165,7 @@
             text-align: right;
             img {
                 max-width: 300px;
-                margin: 30px 0 0;
+                margin: 25px 3px 0 0;
             }
         }
     }
