--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -7,6 +7,7 @@
     background: white;
     margin-top: 0;
     padding-top: 0;
+    position: relative;
     ul {
         list-style: none;
         margin: 0;
