--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -110,7 +110,7 @@
 
 
                 <div class="col-md-4 footer-logo">
-                    <img src="{{site.baseurl}}/assets/img/SE-logo-landscape-trans.png" />
+                    <img src="{{site.baseurl}}/assets/img/SE-logo-landscape-trans.png" alt="Scottish Enterprise logo"/>
                 </div>
             </div>
         </div>
