--- a/_layouts/code-examples.html
+++ b/_layouts/code-examples.html
@@ -17,7 +17,7 @@
                     <span class="example">Example</span> {{ content }}
                 </div>
                 
-                <button class="btn btn-primary margin-bottom" onclick="copyToClipboard('#code-snippet')">Copy HTML to clipboard</button>
+                <button class="btn btn-primary margin-bottom" onclick="copyToClipboard('#code-snippet')">Copy to clipboard</button>
 
                 <!--html code snippet-->
                 <div id="code-snippet">          
