--- a/_layouts/code-examples.html
+++ b/_layouts/code-examples.html
@@ -18,11 +18,18 @@
                 </div>
                 
                 <button class="btn btn-primary margin-bottom" onclick="copyToClipboard('#code-snippet')">Copy to clipboard</button>
+                
+              <button class="btn btn-primary margin-bottom" onclick="copyToClipboard('#test')">Copy test</button>
+                
+                <button class="btn btn-warning margin-bottom" data-clipboard-target="#test">clipboard js</button>
 
                 <!--html code snippet-->
                 <div id="code-snippet">          
                     {% highlight ruby %}
-                    {{ content }}
+                    
+                    <div class="test">                       
+                        {{ content }}
+                    </div>
                     {% endhighlight %}
                 </div>
 
